--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Snapple Wallet</title>
+  <title>Apple Wallet</title>
   <style>
     body {
       margin: 0;
@@ -134,13 +134,13 @@
 <div class="container">
 
   <div class="wallet-container">
-    <div class="wallet-title">Snapple Wallet</div>
+    <div class="wallet-title">Apple Wallet</div>
     <div class="wallet-card"></div>
   </div>
 
   <div class="summary-boxes">
     <div class="summary-box">
-      <div class="summary-title">Total Payments Due</div>
+      <div class="summary-title">Total Payments</div>
       <div class="summary-amount" contenteditable="true">kr 3.239,50</div>
     </div>
     <div class="summary-box">
@@ -184,3 +184,4 @@
 
 </body>
 </html>
+
